Fix first new edited message in full Conpherence spacing
Summary: In new Conpherences, add some padding to the conpherence-edited rule if it's the first child of conpherence-messages.

Test Plan: Test a new Conpherence

Reviewers: epriestley, btrahan

Reviewed By: btrahan

Subscribers: Korvin, epriestley

Differential Revision: https://secure.phabricator.com/D12175

--- a/webroot/rsrc/css/application/conpherence/message-pane.css
+++ b/webroot/rsrc/css/application/conpherence/message-pane.css
@@ -60,6 +60,10 @@
   -webkit-overflow-scrolling: touch;
 }
 
+.conpherence-messages > .conpherence-edited:first-child {
+  padding-top: 20px;
+}
+
 .device .conpherence-message-pane .conpherence-messages {
   left: 0;
   right: 0;
